--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "asset-management-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
