--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
+    "concurrently": "^8.2.2",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
