--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
